--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ button{
     
 
 }
+.navbar ul li input[type=text]{
+    padding-left: 55px;
+}
 .navbar ul li a{
     text-decoration: none;
     color: black;
@@ -98,7 +101,10 @@ border-radius: 50%;
     padding-bottom: 50px;
 }
 @media(max-width:600px){
-    
+    *{
+        box-sizing: border-box;
+        overflow-x: hidden!important;
+        }
     header{
         display:flex;
         flex-direction:column;
@@ -137,13 +143,14 @@ border-radius: 50%;
     .imgone img{
         width:450px!important;
         height: auto;
+         padding-left:15%;
     }
     .first,.underline{
-        padding-left:20%!important;
+        padding-left:5%!important;
+        display:flex;
+        justify-content: space-between;
         } 
-        .underline{
-            padding-left:20%;
-        }
+        
     .navbar ul li{
         display:inline;
         justify-content: center;
@@ -151,6 +158,14 @@ border-radius: 50%;
         flex-direction: column;
     }
     
-        
+     .a{
+        padding-left: 5%;
+    }
+    .lastimg{
+        padding-right: 25%;
+    }
+    nav ul li a{
+        padding-right: 100%!important;
+    }   
     
 }
