--- a/style.css
+++ b/style.css
@@ -160,6 +160,8 @@ border-radius: 50%;
       
     .navbar{
         padding-left:5px;
+        display:flex;
+        flex-direction:column!important;
     }
     .navbar ul{
         padding-left: 15px;
